--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.16.0",
     "@mui/material": "^5.16.7",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-oauth/google": "^0.12.1",
+    "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
@@ -22,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.0.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
